gcc/testsuite/gdc.test/compilable/imports/stdio4003.d
module imports.stdio4003;

import imports.typecons4003;
