gcc/testsuite/gdc.test/fail_compilation/imports/ice7782range.d
module imports.ice7782range;

import imports.ice7782algorithm;
